    _gtk_image_new_from_file_scaled().
* Added API panel_config_hotkey_button_new() to use as CONF_TYPE_EXTERNAL
    widget to allow configure global hotkeys for plugins functions.
* Added API lxpanel_apply_hotkey() as a convenient libkeybinder interface
    to use in modules that also use panel_config_hotkey_button_new(). Now
    LXPanel requires libkeybinder too.
* Added API panel_config_click_button_new() to configure mouse gestures.
* Added "icon-size-changed" signal to LXPanel which is emitted when icons
    size in configuration dialog was changed.
* Improved lxpanel_image_new_for_icon() API to follow panel icons size
    changes, not only theme changes. This way calls on lxpanel_image_*
    APIs on theme or panel changes may be eliminated, i.e. code becomes
    simpler.
* Added new lxpanel_image_change_icon() API for simplification reasons so
    other lxpanel_image_* APIs can be replaced completely.
* APIs lxpanel_button_set_icon() lxpanel_button_update_icon() now don't
    require setting icon size since created button already follows size
    from panel settings. Also it doesn't require refresh after the panel
    configuration change.
* Disabled scaling up small icons in the taskbar: scaled up icons look
    bad due to pixelization (patch from Anton Lobashev).
* Set relief for taskbar button in flat button mode on mouseover (patch
    from SHiNE CsyFeK).
* When adding new panel, now correctly edges of monitor where popup was
    are tried before any other monitors.
* Correctly open 'netstat' plugin own menu on leftclick since rightclick
    should open panel context menu instead.
* System critical temperature level in 'thermal' plugin now is properly
    ignored if manual levels are active.
* Fixed click on 'menu' plugin, only image was clickable, not whole area.

0.7.2
-------------------------------------------------------------------------
* Fixed unhiding panel if it becomes empty and height_when_hidden is 0.